[gd_scene format=3 uid="uid://c0f7u4nsvjkdd"]

[ext_resource type="Texture2D" uid="uid://7m6c54lfcw7r" path="res://d_n_d/art/post it.png" id="1_64jy2"]
[ext_resource type="Script" uid="uid://cdhk3xl7ih3gy" path="res://d_n_d/basic_d_n_d_child.gd" id="2_6fdag"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0e48y"]
size = Vector2(150.58826, 148.07846)

[node name="Note" type="Sprite2D" unique_id=838163697]
modulate = Color(1.1125244, 1.1214021, 0.03167765, 1)
z_index = 2
scale = Vector2(0.39843747, 0.39843747)
texture = ExtResource("1_64jy2")
script = ExtResource("2_6fdag")

[node name="Button" type="Button" parent="." unique_id=199599478]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -62.0
offset_right = -66.0
offset_bottom = -67.0
grow_horizontal = 0
action_mode = 0

[node name="OverlapSensor" type="Area2D" parent="." unique_id=1194151518]
position = Vector2(-61, -52)

[node name="CollisionShape2D" type="CollisionShape2D" parent="OverlapSensor" unique_id=1926999572]
position = Vector2(61.000008, 53.254917)
shape = SubResource("RectangleShape2D_0e48y")

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
